# Parsers-CPP

./: CMakeLists.txt  README (2).md  README.md
01-add-subtract-parser/: README.md  main.cpp
02-precedence/: AstNodes.hpp  CMakeLists.txt  OperatorType.hpp  ParserContext.hpp  Parsing.hpp  SpanUtils.hpp  Tokenization.hpp  TokenizerContext.hpp  Tokens.hpp  main.cpp
03-truth-table/: AstNodes.hpp  CMakeLists.txt  DynamicBitset.hpp  Interpreter.hpp  Main.cpp  Parser.hpp  StringUtils.hpp  TokenRecorder.hpp  TokenType.hpp  Tokenizer.hpp  TokenizerView.hpp  Tokens.hpp
04-interpreter/: AstNodes.hpp  CMakeLists.txt  Grammar.hpp  Interpreter.hpp  Lexer.hpp  LexerView.hpp  Main.cpp  Matcher.hpp  Parser.hpp  ParserView.hpp  README.md  SingleFile.cpp  StringUtils.hpp  TokenRecorder.hpp  Tokenizer.hpp  Tokens.hpp  TruthTable.hpp
